# packedvec

./: .buildbot.sh  CHANGES.md  Cargo.toml  LICENSE  README.md
benches/: packedvec.rs
src/: lib.rs
