[package]
name = "packedvec"
version = "1.0.0"
authors = ["Gabriela Alexandra Moldovan <gabi_250@live.com>", "Laurence Tratt <http://tratt.net/laurie/>"]
readme = "README.md"
# This should be "Apache-2.0 OR MIT OR UPL-1.0" but crates.io doesn't know about
# UPL-1.0.
license = "Apache-2.0 OR MIT"

[dependencies]
num-traits = "0.2"
rand = "0.3"
serde = { version="1.0", features=["derive"], optional=true }
