[package]
name = "packedvec"
description = "Store vectors of integers efficiently"
repository = "https://github.com/softdevteam/packedvec/"
version = "1.2.0"
authors = ["Gabriela Alexandra Moldovan <gabi_250@live.com>", "Laurence Tratt <http://tratt.net/laurie/>"]
readme = "README.md"
# This should be "Apache-2.0 OR MIT OR UPL-1.0" but crates.io doesn't know about
# UPL-1.0.
license = "Apache-2.0 OR MIT"
categories = ["data-structures"]

[dependencies]
num-traits = "0.2"
serde = { version="1.0", features=["derive"], optional=true }

[dev-dependencies]
rand = "0.3"
