[package]
name = "packedvec"
description = "Store vectors of integers efficiently"
repository = "https://github.com/softdevteam/packedvec/"
version = "1.2.2"
authors = ["Gabriela Alexandra Moldovan <gabi_250@live.com>", "Laurence Tratt <http://tratt.net/laurie/>"]
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["data-structures"]

[dependencies]
num-traits = "0.2"
serde = { version="1.0", features=["derive"], optional=true }

[dev-dependencies]
rand = "0.3"
